--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2",
-    "superagent": "^5.2.2"
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "deploy": "gh-pages -d build",
